// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Component only opens one section at a time 1`] = `
<ul
  className="Accordion"
>
  <li
    className="Accordion_item"
    key="0"
  >
    <button
      onClick={[Function]}
      type="button"
    />
     && 
    <p />
  </li>
  <li
    className="Accordion_item"
    key="1"
  >
    <button
      onClick={[Function]}
      type="button"
    />
     && 
    <p />
  </li>
  <li
    className="Accordion_item"
    key="2"
  >
    <button
      onClick={[Function]}
      type="button"
    />
    <Component />
     && 
    <p />
  </li>
</ul>
`;

exports[`Accordion Component opens any clicked section 1`] = `
<ul
  className="Accordion"
>
  <li
    className="Accordion_item"
    key="0"
  >
    <button
      onClick={[Function]}
      type="button"
    />
     && 
    <p />
  </li>
  <li
    className="Accordion_item"
    key="1"
  >
    <button
      onClick={[Function]}
      type="button"
    />
    <Component />
     && 
    <p />
  </li>
  <li
    className="Accordion_item"
    key="2"
  >
    <button
      onClick={[Function]}
      type="button"
    />
     && 
    <p />
  </li>
</ul>
`;

exports[`Accordion Component renders empty given no Accordion without errors 1`] = `
<ul
  className="Accordion"
/>
`;

exports[`Accordion Component renders the no sections by default 1`] = `
<ul
  className="Accordion"
>
  <li
    className="Accordion_item"
    key="0"
  >
    <button
      onClick={[Function]}
      type="button"
    />
     && 
    <p />
  </li>
  <li
    className="Accordion_item"
    key="1"
  >
    <button
      onClick={[Function]}
      type="button"
    />
     && 
    <p />
  </li>
  <li
    className="Accordion_item"
    key="2"
  >
    <button
      onClick={[Function]}
      type="button"
    />
     && 
    <p />
  </li>
</ul>
`;
